# FJFI-school

./: .gitignore  README.md
CIS/: readMe.md
CIS/Financial_data_dashboard/: readme.md
JAVA/lecture2_2/: Linkedlist.java  Program.java  Prvek.java
JEPR/plain_view/: plain_grammar.py  plain_lexer.py  plain_output.py  plain_symbols.py  plain_tohtml.py  plain_tolout.py  plain_toparser.py  plain_toproduct.py  plain_view.py
PCP/: README.md  build.sh  build.zig
PCP/lesson1/: main.cpp  my_list_templated.h
PGR1/space_invaders/: readMe.md
PPY/lecture 1/: HelloWorld.py
PPY/lecture 2/: basics.py
PPY/lecture 3/: lecture 3
PPY/lecture 4/: files.py
PPY/lecture 6/: lambda.py
PPY/lecture 7/: main.py  student.csv
PPY/lecture 8/: main.py
PPY/lecture5/: oop.py
PPY/zapocet/: test.py
PRC1/BigIntLibrary/: BigInt.cpp  main.cpp
PRC1/ZAPOCET/: calculator.cpp  calculator.h
PRC1/ZAPOCET2/: calculator.cpp  calculator.h
PRC1/bigIntLibrary_Matej_Michalek/: BigInt.cpp  BigInt.h  main.cpp  pub1.in
PW_C/: .gitignore  DrawBox.sln
PW_WEB/: FlexboxGrid.md  index.html  style.css
SOS1/: README.MD
UIA1/hw1/a_star/: Cargo.toml
UIA1/hw1/a_star/assets/: example_1.pbm  test.pbm
UIA1/hw1/a_star/src/: a_star.rs  main.rs  mazes.rs  todo.md
UIA1/hw1/astar_workspace/astar_web/: Cargo.toml
UIA1/hw1/astar_workspace/astar_web/src/: main.rs
UOP/: readme.md
UPF/: readme.md
prezentace_OS/: Unix_Shells.md  academic.css
testPurpuse/: a.out  cmd  cmd_test  cmd_test.cpp  cubicroot  cubicroot.cpp  first_program  first_program.cpp  prime  prime.cpp  random.cpp  test
(+396 files in other folders)
