[package]
name = "a_star"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33"
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.105"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlCanvasElement"] }
egui_extras = "0.33"
rfd = "0.15.4"
image = "0.25"
