[package]
name = "astar_web"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33"
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.105"
#web-sys = { version = "0.3.82", features = ["Window", "Document", "HtmlElement", "Text"] }
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlCanvasElement"] }

egui_extras = "0.33"
wasm-bindgen-futures = "0.4"
